activity swagger + fix on remove activity route
